[package]
name = "pandocs-preproc"
version = "0.1.0"
authors = ["ISSOtm <eldredhabert0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = "2.34.0"
lazy_static = "1.5.0"
# mdbook here is only used as a lib, so no need for the extra features
mdbook = { version = "0.4.40", default-features = false }
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.4"
regex = "1.10.6"
serde_json = "1.0.128"
termcolor = "1.4.1"
