[package]
name = "pandocs-renderer"
version = "0.1.0"
authors = ["ISSOtm <eldredhabert0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
globwalk = "0.8.1"
lazy_static = "1.5.0"
mdbook-renderer = "0.5.2"
mdbook-html = "0.5.2"
regex = "1.10"
termcolor = "1.4.1"
url = "2.5.2"
